--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#751420 by Damien Tournoud, pwolanin, skwashd shorter site hash with different algorithm.
 #742998 by pwolanin: stop catching exceptions in the solr factory function.
 #744038 by siliconmeadow: Changed Change of Drush extension command naming conventions.
 #733116 by pwolanin | drewish: Changed Implement hook_flush_caches().
