--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#658278 by cpliakas | JThan: Fixed Errors when building the search index in PHP 5.3.
 #765486 by robertDouglass: Fixed Several cases where Luke cache not getting cleared and resulting in errors.
 #765448 by robertDouglass: Fixed Facet blocks for hierarchical taxonomy broken.
 #751420 by pwolanin, skwashd | Damien Tournoud, Scott Reynolds: Fixed apachesolr_site_hash() calls md5() twice.
