--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#614644 by netsensei | robertDouglass: Fixed Forms attached to Apachesolr search results won't work.
 #747346 by robertDouglass, pwolanin | lazysoundsystem: Fixed Typo in apachesolr_search().module.
 #763072 by robertDouglass, justinrandell | pwolanin: Fixed warnings when indexing old, crappy html.
 #658278 by cpliakas | JThan: Fixed Errors when building the search index in PHP 5.3.
