--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#614644 by netsensei | robertDouglass: Fixed Forms attached to Apachesolr search results won't work.
 #747346 by robertDouglass, pwolanin | lazysoundsystem: Fixed Typo in apachesolr_search().module.
 #750426 by mkalkbrenner: remove ununsed textTight type from schema.xml.
 #751420 by Damien Tournoud, pwolanin, skwashd: shorter site hash with different algorithm.
