--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,9 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#824154 by pwolanin: update schema.xml to add preserveOriginal="1" to WordDelimiterFilterFactory.
+#818608 by nofun: fix 5.3 warning on get_object_vars() 
+        by jpmckinney: Fix whitespace. Respect coding standards. Fix watchdog argument. Redo apachesolr_facet_block refactorings from 6.x-2.x
 #759638 by pwolanin: refactor code to make it possible for multiple modules to run a search.
 #763072 by robertDouglass, justinrandell: Fixed warnings when indexing old, crappy html.
 #614644 by netsensei | robertDouglass: Fixed Forms attached to Apachesolr search results won't work.
