--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#830976 by eosrei, pwolanin: make sure we return a non-zero ping time on success.
 #824154 by pwolanin: update schema.xml to add preserveOriginal="1" to WordDelimiterFilterFactory.
 #804590 by ygerasimov: Bug in building query from subqueries in Solr_Base_Query
 #818608 by nofun: fix 5.3 warning on get_object_vars() 
