--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
+#830976 by eosrei, pwolanin: make sure we return a non-zero ping time on success.
 #795912 by tjwallace, dmitry_bezer, jpmckinney, pwolanin: inital Drupal 7 port.
 
 Apache Solr integration 6.x-2.0-BETA1, 2010-04-08
