--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 5.x-2.x, 2010-xx-xx
 ------------------------------
+#830976 by eosrei, pwolanin: make sure we return a non-zero ping time on success.
 #824154 by pwolanin: update schema.xml to add preserveOriginal="1" to WordDelimiterFilterFactory.
 #747346 by robertDouglass, pwolanin | lazysoundsystem: Fixed Typo in apachesolr_search().module.
 #724440 by abautu: Current search does not display properly the CCK filters.
