--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 5.x-2.x, 2010-xx-xx
 ------------------------------
+#536990 by pwolanin | jpmckinney, janusman: always index content as an anonymous user.
 #592522 by pwolanin, quaoar: use multi-table sytax for MySQL to avoid killer sub-selects.
 #348832 by pwolanin: Increase maxFieldLength to 20000, rationalize version strings.
 #835850 by pwolanin: add more replicated files to solrconfig.xml master section.
