--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -19,6 +19,7 @@ Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 #824534 backport from 6.x-2.x of method to replace keywords in query object.
 #824154 by pwolanin: update schema.xml to add preserveOriginal="1" to WordDelimiterFilterFactory.
 #818608 by nofun: fix 5.3 warning on get_object_vars().
+#721258 by davidwhthomas, jpmckinney: fix warning, allow the default sort to be changed more easily.
 #592722 by jpmckinney: Reorder code in Solr_Base_Query and Drupal_Solr_Query_Interface.
            Fix some comments. Remove E_STRICT warnings. Respect coding standards.
 #       by jpmckinney: Fix whitespace. Respect coding standards. Fix watchdog argument. Redo apachesolr_facet_block refactorings from 6.x-2.x
