--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,7 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.2, xxxx-xx-xx
 ------------------------------
-
+#867448 by B-Prod | jpmckinney: Fixed Apache taxonomy search does not include the search.pages.inc file.
 
 Apache Solr Search Integration 6.x-1.1, 2010-07-25
 ------------------------------
