--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr Search Integration 6.x-1.3, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.2, 2010-08-11
 ------------------------------
+#878996 by pwolanin, weri: don't break out of indexing loop if an exception is caught.
 #880488 by pwolanin: security hardening: don't use unserialize on untrusted data.
 #867448 by B-Prod | jpmckinney: Fixed Apache taxonomy search does not include the search.pages.inc file.
 
