--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.3, xxxx-xx-xx
 ------------------------------
+#885950 by pwolanin, csevb10 preserve added/removed filters when filterstring is re-parsed.
 
 Apache Solr Search Integration 6.x-1.2, 2010-08-11
 ------------------------------
