--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
+#885950 by pwolanin, csevb10 preserve added/removed filters when filterstring is re-parsed.
 #864160 by pwolanin: Allow the caller a last chance to modify the query and params.
 #536990 by pwolanin | jpmckinney, janusman: always index content as an anonymous user.
 #835850 by pwolanin: add more replicated files to solrconfig.xml master section.
