--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#901720 by robertDouglass: Fixed Highlighting snippets in search results not flexible enough, and logic improvement.
 #899590 by robertDouglass: Changed CCK facet definitions needs to expand its role and have a 'facets' param.
 #899560 by robertDouglass: Fixed apachesolr_do_query() has to take $params by reference.
 #751004 by pwolanin, jpmckinney, rjbrown99, robertDouglass | EugenMayer, camidoo: Fixed Respect NODE_BUILD_SEARCH_INDEX exclusion setting.
