--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#828412 by eosrei | jpmckinney: Fixed apachesolr_get_facet_definition() searches incorrect field for definition.
 #864146 by pwolanin | jpmckinney: Fixed When moving fq to q.alt, we should parenthesize each fq.
 NEW MODULE: ApacheSolr Text; takes care of text fields from CCK with content permissions.
 #704190 by pwolanin: Added Add page callbacks to display conf files in the index in reports.
