--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#910100 by robertDouglass: Changed Make whole $snippets array available to theme layer.
 
 Apache Solr integration 6.x-2.0-BETA3, 2010-09-04
 ------------------------------
