--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.3, xxxx-xx-xx
 ------------------------------
+#949768 by pwolanin: Index more CCK fields by default.
 #925700 by janusman: Changed Quick fix: reduce t() string duplicity.
 #899560 by robertDouglass: Fixed apachesolr_do_query() has to take $params by reference.
 #885950 by pwolanin, csevb10 preserve added/removed filters when filterstring is re-parsed.
