--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,15 +5,16 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
+#795912 by pwolanin patch 64: fixes various settings forms and variables, avoids a notice, removes use of md5() in favor of drupal_hash_base64(). 
 #982846 by pwolanin: split out (and deprecate) the taxonomy path hijack feature.
 #982840 by pwolanin: OO cleanup for Drupal 7 coding standards.
 #982490 by pwolanin: rip out Drupal 6.x update functions, update README.
 #904100 by das-peter, pwolanin: prevent missing table error when comment module not enabled.
-#795912 by pwolanin patch 62, requirements fixes, add a button to test server settings.
-#795912 by pwolanin patch 61, fix up server add/edit/delete funcitonality.
-#795912 by pwolanin, crell patch 60 - makes Field API handling more generic, adds a framework
+#795912 by pwolanin patch 62: requirements fixes, add a button to test server settings.
+#795912 by pwolanin patch 61: fix up server add/edit/delete funcitonality.
+#795912 by pwolanin, crell patch 60: - makes Field API handling more generic, adds a framework
         for handling multiple Solr servers, and moves the nodeaccess module out of the contrib dir.
-#885950 by pwolanin, csevb10 preserve added/removed filters when filterstring is re-parsed.
+#885950 by pwolanin, csevb10: preserve added/removed filters when filterstring is re-parsed.
 #864160 by pwolanin: Allow the caller a last chance to modify the query and params.
 #536990 by pwolanin | jpmckinney, janusman: always index content as an anonymous user.
 #835850 by pwolanin: add more replicated files to solrconfig.xml master section.
