--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#983572 by amateescu, pwolanin: fix for empty filter values causing Solr error.
 #925700 by janusman: Changed Quick fix: reduce t() string duplicity.
 #910100 by robertDouglass: Changed Make whole $snippets array available to theme layer.
 
