--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 5.x-2.x, 2010-xx-xx
 ------------------------------
+#983572 by amateescu, pwolanin: fix for empty filter values causing Solr error.
 #899560 by robertDouglass: Fixed apachesolr_do_query() has to take $params by reference.
 #885950 by pwolanin, csevb10 preserve added/removed filters when filterstring is re-parsed.
 #864160 by pwolanin: Allow the caller a last chance to modify the query and params.
