--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
+#983892 by pwolanin: update schema to use long instead of int fields.
 #983894 by pwolanin: add a set of conf files that can be used to create a test core.
 #983572 by amateescu, pwolanin: fix for empty filter values causing Solr error.
 #795912 by pwolanin patch 64: fixes various settings forms and variables, avoids a notice, removes use of md5() in favor of drupal_hash_base64(). 
