--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,8 +5,9 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
-#997240 by VladGh: fix parameters for apachesolr_server_edit_form for PHP 5.3.
-#993448 by pwolanin, scor: get Solr result docs as stdClass instead of Apache_Solr_Document.
+#1000396 by dmitry_bezer: Edit server form ignored "Make this server the default" checkbox.
+#997240  by VladGh: fix parameters for apachesolr_server_edit_form for PHP 5.3.
+#993448  by pwolanin, scor: get Solr result docs as stdClass instead of Apache_Solr_Document.
 
 Apache Solr integration 7.x-1.0-BETA1, 2010-12-09
 ------------------------------
