--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,7 @@
 
 Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 ------------------------------
+#957652  by aegnor, pwolanin: fix str_replace may remove a substring in filter_extract.
 
 Apache Solr Search Integration 6.x-1.3, xxxx-xx-xx
 ------------------------------
