--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#957652  by aegnor, pwolanin: fix str_replace may remove a substring in filter_extract.
 #983458 by craig_: respect apachesolr_read_only setting for mass updates, use defined constants.
 #983572 by amateescu, pwolanin: fix for empty filter values causing Solr error.
 #925700 by janusman: Changed Quick fix: reduce t() string duplicity.
