--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,12 +5,13 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
-
-Apache Solr integration 7.x-1.0-BETA2, 2010-12-18
-------------------------------
+#1007860 by pwolanin: API fix for hook_apachesolr_modify_query, add type hinting.
 #1007824 by pwolanin: use contextual links to avoid block caching mode issues.
 #1003500 fix icon and icon path.
 #957652  by aegnor, pwolanin: fix str_replace may remove a substring in filter_extract.
+
+Apache Solr integration 7.x-1.0-BETA2, 2010-12-18
+------------------------------
 #983458  by craig_ : mass update and mass delete ignore setting apachesolr_read_only.
 #996976  by scor: list item class should be an array, not a string.
 #995526  by pwolanin: Alter server schema so we don't exceed the MyISAM key size limit.	
